--- a/03/index.html
+++ b/03/index.html
@@ -1,48 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Home work 03</title>
-</head>
-<body>
-    <div class="container" style="width: 500px; margin: auto" >
-        <h1 align="left" >
-            Заголовок 1
-        </h1>
-        <h2 align="left">
-            Заголовок 2
-        </h2>
-        <p align="left">
-            Каждый <em>веб-разработчик</em> знает, что такое <strong>текст-«рыба»</strong>. Текст этот, несмотря на название, не имеет никакого отношения к обитателям водоемов. Используется он веб-дизайнерами для вставки на интернет-страницы и демонстрации внешнего вида контента, просмотра шрифтов, абзацев, отступов и т.д. Так как <strong><em>цель</em> применения</strong> такого текста исключительно демонстрационная, то и смысловую нагрузку ему нести совсем необязательно. Более того, нечитабельность текста сыграет на руку при оценке качества восприятия макета.
-        </p>
-        <p align="left">
-            Самым известным «рыбным» текстом является знаменитый Lorem ipsum. Считается, что впервые его применили в книгопечатанииеще в XVI веке. Своим появлением Lorem ipsum обязан древнеримскому философу Цицерону, ведь именно из его трактата «О пределах добра и зла» средневековый книгопечатник вырвал отдельные фразы и слова, получив <strong>текст-«рыбу»</strong>, широкоиспользуемый и по сей день. 
-            <br>
-            Конечно, возникают некоторые вопросы, связанные с использованием Lorem ipsum на сайтах и проектах, ориентированных на кириллический контент – написание символов на латыни и на кириллице значительно различается.
-        </p>
-        <p align="left">
-            И даже с языками, использующими латинский алфавит, могут возникнуть небольшие проблемы: в различных языках те или иные буквы встречаются с разной частотой, имеется разница в длине наиболее распространенных слов. Отсюда напрашивается вывод, что все же лучше использовать в качестве «рыбы» текст на том языке, который планируется использовать при запуске проекта. Сегодня существует несколько вариантов Lorem ipsum, кроме того, есть специальные генераторы, создающие собственные варианты текста на основе оригинального трактата, благодаря чему появляется возможность получить болеедлинный неповторяющийся набор слов.
-        </p>
-        <hr>
-        <p align="left">
-            Покупки:
-            <ul>
-                <li>Мороженое</li>
-                <li>Хлеб</li>
-                <li>Ручка</li>
-                <li>Блокнот</li>
-            </ul>
-        </p>
-        <p align="left">
-            Мой маршрут на день:
-            <ol>
-                <li>Дом</li>
-                <li>Работа</li>
-                <li>Кафе</li>
-                <li>Работа</li>
-                <li>Магазин</li>
-                <li>Дом</li>
-            </ol> 
-        </p>
-    </div>
+    <head>
+        <meta charset="UTF-8">
+        <title>Home work 03</title>
+    </head>
+    <body>
+        <div class="container" style="width: 500px; margin: auto" >
+            <h1 align="left" >
+                Заголовок 1
+            </h1>
+            <h2 align="left">
+                Заголовок 2
+            </h2>
+            <p align="left">
+                Каждый <em>веб-разработчик</em> знает, что такое <strong>текст-«рыба»</strong>. Текст этот, несмотря на название, не имеет никакого отношения к обитателям водоемов. Используется он веб-дизайнерами для вставки на интернет-страницы и демонстрации внешнего вида контента, просмотра шрифтов, абзацев, отступов и т.д. Так как <strong><em>цель</em> применения</strong> такого текста исключительно демонстрационная, то и смысловую нагрузку ему нести совсем необязательно. Более того, нечитабельность текста сыграет на руку при оценке качества восприятия макета.
+            </p>
+            <p align="left">
+                Самым известным «рыбным» текстом является знаменитый Lorem ipsum. Считается, что впервые его применили в книгопечатанииеще в XVI веке. Своим появлением Lorem ipsum обязан древнеримскому философу Цицерону, ведь именно из его трактата «О пределах добра и зла» средневековый книгопечатник вырвал отдельные фразы и слова, получив <strong>текст-«рыбу»</strong>, широкоиспользуемый и по сей день. 
+                <br>
+                Конечно, возникают некоторые вопросы, связанные с использованием Lorem ipsum на сайтах и проектах, ориентированных на кириллический контент – написание символов на латыни и на кириллице значительно различается.
+            </p>
+            <p align="left">
+                И даже с языками, использующими латинский алфавит, могут возникнуть небольшие проблемы: в различных языках те или иные буквы встречаются с разной частотой, имеется разница в длине наиболее распространенных слов. Отсюда напрашивается вывод, что все же лучше использовать в качестве «рыбы» текст на том языке, который планируется использовать при запуске проекта. Сегодня существует несколько вариантов Lorem ipsum, кроме того, есть специальные генераторы, создающие собственные варианты текста на основе оригинального трактата, благодаря чему появляется возможность получить болеедлинный неповторяющийся набор слов.
+            </p>
+            <hr>
+            <p align="left">
+                Покупки:
+                <ul>
+                    <li>Мороженое</li>
+                    <li>Хлеб</li>
+                    <li>Ручка</li>
+                    <li>Блокнот</li>
+                </ul>
+            </p>
+            <p align="left">
+                Мой маршрут на день:
+                <ol>
+                    <li>Дом</li>
+                    <li>Работа</li>
+                    <li>Кафе</li>
+                    <li>Работа</li>
+                    <li>Магазин</li>
+                    <li>Дом</li>
+                </ol> 
+            </p>
+        </div>
+    </body>   
 </html>
