--- a/06/index.html
+++ b/06/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>HomeWork 06</title>
-	<script type="text/javascript" src="main.js"></script>
+	<script type="text/javascript" src="./main.js"></script>
 </head>
 <body>
 <h1>This page for homework 06!</h1>
