modife index.html

--- a/08/index.html
+++ b/08/index.html
@@ -24,21 +24,18 @@
 		div
 		{
 			display: flex;
-			flex-direction: row;
-
-			height: 50px;
-
+			
+			min-height: 50px;
 			border-style: solid;
 		}
 		span
 		{
-			position: relative;
-			padding: 10px;
 			min-width: 8px;
+			margin: 0 10px;
 		}
 		.block1
 		{
-			justify-content: space-around;
+			justify-content: space-between;
 			align-items: center;
 		}
 		.block2
@@ -53,16 +50,8 @@
 		}
 		.block4
 		{
-			justify-content: space-between;
+			justify-content: space-around;
 			align-items: flex-end;
-		}
-		.block2 span
-		{
-			padding-top: 0;
-		}
-		.block3 span
-		{
-			padding-bottom: 0;
 		}
 	</style>
 </head>
