add index style npm

--- a/09/index.html
+++ b/09/index.html
@@ -1,14 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>HomeWork09</title>
-
-	<style>
-
-	</style>
+	<title>HomeWork 09</title>
+	<link rel="stylesheet" type="text/css" href="./node_modules/reset-css/reset.css">
+	<link rel="stylesheet" type="text/css" href="./style.css">
 </head>
 <body>
-
-
+	<div class="header">Header</div>
+	<div class="container">
+		<div class="sidebar">Sidebar</div>
+		<div class="content">
+			<div class="main-content">Main content</div>
+			<div class="other-content">Other content</div>
+		</div>
+	</div>
+	<div class="footer">Footer</div>
 </body>
 </html>
+<!-- 
+1) Написать стили в style.css для index.html по макетам layout-big-size.png и layout-small-size.png. Размер блоков должны быть адаптивными по размеру окна.
+
+Статические размеры для блоков 100px. Отступы для блоков 5px.
+
+2) Сверстать кастомные чекбокс внутри .main-content блока. Стиль - ваша фантазия. Чекбокс должен иметь стили для двух состояний и для анимации навидения курсора на него. -->
