modify index style

--- a/09/index.html
+++ b/09/index.html
@@ -10,7 +10,7 @@
 	<div class="container">
 		<div class="sidebar">Sidebar</div>
 		<div class="content">
-			<div class="main-content">Main content</div>
+			<div class="main-content"><span>Main content</span></div>
 			<div class="other-content">Other content</div>
 		</div>
 	</div>
