--- a/09/index.html
+++ b/09/index.html
@@ -6,15 +6,25 @@
 	<link rel="stylesheet" type="text/css" href="./style.css">
 </head>
 <body>
-	<div class="header">Header</div>
+	<div class="header">
+		<span>Header</span>
+	</div>
 	<div class="container">
-		<div class="sidebar">Sidebar</div>
+		<div class="sidebar">
+			<span>Sidebar</span>
+		</div>
 		<div class="content">
-			<div class="main-content"><span>Main content</span></div>
-			<div class="other-content">Other content</div>
+			<div class="main-content">
+				<span>Main content</span>
+			</div>
+			<div class="other-content">
+				<span>Other content</span>
+			</div>
 		</div>
 	</div>
-	<div class="footer">Footer</div>
+	<div class="footer">
+		<span>Footer</span>
+	</div>
 </body>
 </html>
 <!-- 
