finall version without vertical

--- a/09/index.html
+++ b/09/index.html
@@ -6,82 +6,80 @@
 	<link rel="stylesheet" type="text/css" href="./style.css">
 </head>
 <body>
-	<div class="header vert-outer">
-		<span class="vert-inner">Header</span>
+	<div class="header">
+		<span>Header</span>
 	</div>
 	<div class="container">
-		<div class="sidebar vert-outer">
-			<span class="vert-inner">Sidebar</span>
+		<div class="sidebar">
+			<span>Sidebar</span>
 		</div>
 		<div class="content">
-			<div class="main-content vert-outer">
-				<div class="vert-inner">
-					<span class="">Main content</span>
-					<div class="input-form">
-						<div class="input-row">
-							<label for="input-log">Login:</label>		
-							<input id="input-log" 
-									type="text" 
-									placeholder="Enter login">
+			<div class="main-content">
+				<span>Main content</span>
+				<div class="input-form">
+					<div class="input-row">
+						<label for="input-log">Login:</label>		
+						<input id="input-log" 
+								type="text" 
+								placeholder="Enter login">
+					</div>
+					<div class="input-row">
+						<label for="input-pass">Password:</label>	
+						<input id="input-pass" 
+								type="password" 
+								placeholder="Enter password">
+					</div>
+					<div class="input-row">
+						<label for="input-mail">E-mail:</label>	
+						<input id="input-mail" 
+								type="email" 
+								placeholder="Enter e-mail">
+					</div>
+					<div class="input-row">
+						<label for="input-check">Some Checkbox</label>
+						<div class="checkbox">
+							<input id="input-check" 
+									type="Checkbox"
+									checked>
+							<label for="input-check"></label>
 						</div>
-						<div class="input-row">
-							<label for="input-pass">Password:</label>	
-							<input id="input-pass" 
-									type="password" 
-									placeholder="Enter password">
+					</div>
+					<div class="input-row">
+						<div class="radio">
+							<label for="rad-year">Year</label>
+							<input id="rad-year" 
+									type="radio"
+									name="radio-name" 
+									checked>
+							<label class="radio-label" 
+									for="rad-year"></label>
 						</div>
-						<div class="input-row">
-							<label for="input-mail">E-mail:</label>	
-							<input id="input-mail" 
-									type="email" 
-									placeholder="Enter e-mail">
+						<div class="radio">
+							<label for="rad-month">Month</label>
+							<input id="rad-month" 
+									name="radio-name"
+									type="radio">
+							<label class="radio-label" 
+									for="rad-month"></label>
 						</div>
-						<div class="input-row">
-							<label for="input-check">Some Checkbox</label>
-							<div class="checkbox">
-								<input id="input-check" 
-										type="Checkbox"
-										checked>
-								<label for="input-check"></label>
-							</div>
-						</div>
-						<div class="input-row">
-							<div class="radio">
-								<label for="rad-year">Year</label>
-								<input id="rad-year" 
-										type="radio"
-										name="radio-name" 
-										checked>
-								<label class="radio-label" 
-										for="rad-year"></label>
-							</div>
-							<div class="radio">
-								<label for="rad-month">Month</label>
-								<input id="rad-month" 
-										name="radio-name"
-										type="radio">
-								<label class="radio-label" 
-										for="rad-month"></label>
-							</div>
-							<div class="radio">
-								<label for="rad-day">Day</label>
-								<input id="rad-day" 
-										name="radio-name"
-										type="radio">
-								<label class="radio-label" 
-										for="rad-day"></label>
-							</div>
+						<div class="radio">
+							<label for="rad-day">Day</label>
+							<input id="rad-day" 
+									name="radio-name"
+									type="radio">
+							<label class="radio-label" 
+									for="rad-day"></label>
 						</div>
 					</div>
 				</div>
 			</div>
-			<div class="other-content vert-outer">
-				<span class="vert-inner">Other content</span>
+			<div class="other-content">
+				<span>Other content</span>
 			</div>
 		</div>
 	</div>
-	<div class="footer vert-outer">
-		<span class="vert-inner">Footer</span>
+	<div class="footer">
+		<span>Footer</span>
 	</div>
 </body>
 </html>
