--- a/11/index.html
+++ b/11/index.html
@@ -24,11 +24,14 @@
 				<img src="./slides/5.jpg">
 			</div>
 		</div>
-		<div class="button-container">
-			<input class="button" type="button" value="Start Slaider">
-			<span class="attention">Слайдер <br> остановлен</span> 
-			<input class="button" type="button" value="Stop Slaider">
+		<div class="start-container">
+			<input class="button start-button" type="button" value="Start">
+			<span class="attention">Слайдер остановлен</span> 
 		</div>
+		<div class="stop-container">
+			<input class="button stop-button" type="button" value="Stop">
+			<span class="attention">Слайдер работает</span>
+		</div> 
 	</div>
 	<script src="./slide.js"></script>
 </body>
