--- a/11/index.html
+++ b/11/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Slide - HomeWork_11</title>
-
+	<meta charset="utf-8"></meta>
 	<link rel="stylesheet" type="text/css" href="./slide.css">
 </head>
 <body>
