--- a/11/index.html
+++ b/11/index.html
@@ -23,6 +23,9 @@
 			<div class="slide">
 				<img src="./slides/5.jpg">
 			</div>
+			<div class="slide">
+				<img src="./slides/1.jpg">
+			</div>
 		</div>
 		<div class="start-container">
 			<input class="button start-button" type="button" value="Start">
