navbar in process

--- a/12/index.html
+++ b/12/index.html
@@ -10,7 +10,14 @@
 <body>
 	<div class="container">
 		<div class="header">
-			header row
+			<nav class="navbar navbar-light">
+				<a class="navbar-brand" href="#"> 
+					<img  class="navbar-brand" src="./logo.png">
+				</a>
+				<div>
+					
+				</div>
+			</nav>
 		</div>
 		<div class="main">
 			<div class="col-3 menu">menu column 3 of 12</div>
