--- a/12/index.html
+++ b/12/index.html
@@ -8,20 +8,55 @@
 	<link rel="stylesheet" type="text/css" href="./style.css">
 </head>
 <body>
+
 	<div class="container">
 		<div class="header">
-			<nav class="navbar navbar-light">
+			<nav class="navbar navbar-expand-lg navbar-light">
+				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
 				<a class="navbar-brand" href="#"> 
-					<img  class="navbar-brand" src="./logo.png">
+					<img  class="navbar-brand" 
+					src="./images/logo.png" width="100" height="100">
 				</a>
-				<div>
-					
+				<div class="collapse navbar-collapse" id="navbarNav">
+					<div class="navbar-nav navbar-nav mr-auto mt-2 mt-lg-0" 
+							id="navbarNavInner">
+						<a class="nav-item nav-link active" href="#">Home</a>
+						<a class="nav-item nav-link" href="#">Features</a>
+						<a class="nav-item nav-link" href="#">Pricing</a>
+						<a class="nav-item nav-link disabled" href="#">Disabled</a>
+					</div>
+					<form class="form-inline">
+						<input class="form-control mr-sm-2" type="search" 
+								placeholder="Search" aria-label="Search">
+						<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+					</form>
 				</div>
 			</nav>
 		</div>
 		<div class="main">
 			<div class="col-3 menu">menu column 3 of 12</div>
-			<div class="col-9 content">content column 9 of 12</div>
+			<div class="col-9 content">
+				<span>content column 9 of 12</span>
+				<div id="carouselExampleSlidesOnly" 
+					class="carousel slide" data-ride="carousel" data-interval="1000" data-pause="false">
+					<div class="carousel-inner">
+						<div class="carousel-item active">
+							<img class="d-block w-100" 
+							src="./images/1.jpg" alt="First slide">
+						</div>
+						<div class="carousel-item">
+							<img class="d-block w-100" 
+							src="./images/2.jpg" alt="Second slide">
+						</div>
+						<div class="carousel-item">
+							<img class="d-block w-100" 
+							src="./images/3.jpg" alt="Third slide">
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
 		<div class="footer">
 			footer row
@@ -31,4 +66,4 @@
 	<script src="./node_modules/jquery/dist/jquery.js"></script>
 	<script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
 </body>
-</html>
+</html><1></1>
