--- a/13/index.html
+++ b/13/index.html
@@ -25,8 +25,8 @@
             </ul>
           </nav>
         </div>
-        <div class="col-9"
-          <div class="col mt-2">
+        <div class="col-9">
+          <div class="col mt-2"> 
             <h2 class="col">Page 1</h2>
             <div class="col">Content for Page 1<a class="badge" href="/page/1.html">...</a>
             </div>
