--- a/15/index.html
+++ b/15/index.html
@@ -8,25 +8,25 @@
 <body>
 	<ul class="menu">
 		<li class="menu-main menu-direction">	
-			<a href="#" class="menu-link">Main Menu</a>
+			<a href="#" class="menu-link menu-title-link">Main Menu</a>
 			<a href="#" class="menu-link">Products</a>
 			<a href="#" class="menu-link">Store</a>
 			<a href="#" class="menu-link">Forum</a>
 		</li>
 		<li class="menu-settings menu-direction">
-			<a href="#" class="menu-link">Settings</a>
-			<a href="#" class="menu-link"></a>
-			<a href="#" class="menu-link"></a>
-			<a href="#" class="menu-link"></a>
+			<a href="#" class="menu-link menu-title-link">Settings</a>
+			<a href="#" class="menu-link">Parameter 1</a>
+			<a href="#" class="menu-link">Parameter 2</a>
+			<a href="#" class="menu-link">Parameter 3</a>
 		</li>
 		<li class="menu-links menu-direction">
-			<a href="#" class="menu-link">Links</a>
+			<a href="#" class="menu-link menu-title-link">Links</a>
 			<a href="#" class="menu-link">Link</a>
 		</li>
 		<li class="menu-search menu-direction">
-			<a href="#" class="menu-link">Search</a>
-			<a href="#" class="menu-link">Search in shop</a>
-			<a href="#" class="menu-link">Search in forum</a>
+			<a href="#" class="menu-link menu-title-link">Search</a>
+			<a href="#" class="menu-link">Shop search</a>
+			<a href="#" class="menu-link">Forum search</a>
 		</li>
 	</ul>
 
