--- a/15/index.html
+++ b/15/index.html
@@ -7,28 +7,29 @@
 </head>
 <body>
 	<ul class="menu">
-		<li class="menu-main menu-direction">	
+		<li class="menu-main menu-direction__closed">	
 			<a href="#" class="menu-link menu-title-link">Main Menu</a>
-			<a href="#" class="menu-link">Products</a>
+			<a href="#" class="menu-link link-size">Products</a>
 			<a href="#" class="menu-link">Store</a>
 			<a href="#" class="menu-link">Forum</a>
 		</li>
-		<li class="menu-settings menu-direction">
+		<li class="menu-settings menu-direction__closed">
 			<a href="#" class="menu-link menu-title-link">Settings</a>
-			<a href="#" class="menu-link">Parameter 1</a>
+			<a href="#" class="menu-link link-size">Parameter 1</a>
 			<a href="#" class="menu-link">Parameter 2</a>
 			<a href="#" class="menu-link">Parameter 3</a>
+			<a href="#" class="menu-link">Parameter 4</a>
 		</li>
-		<li class="menu-links menu-direction">
+		<li class="menu-links menu-direction__closed">
 			<a href="#" class="menu-link menu-title-link">Links</a>
-			<a href="#" class="menu-link">Link</a>
+			<a href="#" class="menu-link link-size">Link</a>
 		</li>
-		<li class="menu-search menu-direction">
+		<li class="menu-search menu-direction__closed">
 			<a href="#" class="menu-link menu-title-link">Search</a>
-			<a href="#" class="menu-link">Shop search</a>
+			<a href="#" class="menu-link link-size">Shop search</a>
 			<a href="#" class="menu-link">Forum search</a>
 		</li>
 	</ul>
-
+	<script type="text/javascript" src="main.js"></script>
 </body>
 </html>
