--- a/12/index.html
+++ b/12/index.html
@@ -66,4 +66,4 @@
 	<script src="./node_modules/jquery/dist/jquery.js"></script>
 	<script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
 </body>
-</html><1></1>
+</html>
